修改宠物格式，调整开发环境的hotreload

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": "yellowrush/crossgate",
   "scripts": {
-    "dev": "vuepress dev docs",
+    "dev": "vuepress dev docs --temp .temp",
     "build": "vuepress build docs",
     "svgo": "vuepress svgo docs",
     "deploy": "./deploy.sh"
