--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "@goy/vuepress-plugin-svg-icons": "^4.2.3",
+    "@vuepress/plugin-pwa": "^1.8.2",
     "vue-typical": "^1.4.0",
     "vuepress": "^1.5.3",
     "vuepress-plugin-comment": "^0.7.3",
