--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,17 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      - name: Build
+      - name: setup node
+        uses: actions/setup-node@v3
+        
+      - name: install
+        run: yarn --frozen-lockfile
+
+      - name: build
         run: yarn build
 
       # Runs a set of commands using the runners shell
-      - name: Commit build
+      - name: commit
         run: |
           cp -b ../beaudar.json .,
           git init
@@ -35,6 +41,6 @@ jobs:
           git commit -m 'deploy'
           git remote -v
           
-      - name: Push Remote Origin
+      - name: push to gh-page
         run: git push -f git@github.com:crossgate-book/crossgate-book.github.io.git master
       
