--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: setup node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
+        with:
+          node-version: "12"
         
       - name: install
         run: yarn --frozen-lockfile
