--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,24 +31,13 @@ jobs:
       - name: install
         run: yarn --frozen-lockfile
 
-      - name: build
+      - name: build & deploy
         run: |
-          yarn build,
+          yarn build
           cp -b ../beaudar.json .
           git init
           git commit -m 'deploy'
           git commit -m 'deploy'
           git remote -v
-
-      # Runs a set of commands using the runners shell
-      - name: commit
-        run: |
-          cp -b ../beaudar.json .,
-          git init
-          git commit -m 'deploy'
-          git commit -m 'deploy'
-          git remote -v
-          
-      - name: push to gh-page
-        run: git push -f git@github.com:crossgate-book/crossgate-book.github.io.git master
+          git push -f git@github.com:crossgate-book/crossgate-book.github.io.git master
       
